[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Misc/QuickSelectionPanel.gd" type="Script" id=1]

[node name="ModQuickSelectionPanel" type="ColorRect"]
margin_left = 7.0
margin_top = 4.0
margin_right = 155.0
margin_bottom = 214.0
color = Color( 0.254902, 0.243137, 0.286275, 1 )
script = ExtResource( 1 )

[node name="Bg" type="ColorRect" parent="."]
anchor_left = 0.00675676
anchor_top = 0.0047619
anchor_right = 0.993243
anchor_bottom = 0.995238
color = Color( 0.145098, 0.137255, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Bg"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Spacer" type="Control" parent="Bg/VBoxContainer"]
margin_right = 145.0

[node name="LabelContainer" type="HBoxContainer" parent="Bg/VBoxContainer"]
margin_top = 4.0
margin_right = 145.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="Bg/VBoxContainer/LabelContainer"]
margin_right = 145.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select a mod:"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Bg/VBoxContainer"]
margin_top = 22.0
margin_right = 145.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="Bg/VBoxContainer/ScrollContainer"]
margin_right = 145.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
hide_root = true

[node name="LabelContainer2" type="HBoxContainer" parent="Bg/VBoxContainer"]
margin_top = 183.0
margin_right = 145.0
margin_bottom = 203.0

[node name="Spacer3" type="Control" parent="Bg/VBoxContainer/LabelContainer2"]
margin_bottom = 20.0

[node name="CloseButton" type="Button" parent="Bg/VBoxContainer/LabelContainer2"]
margin_left = 4.0
margin_right = 51.0
margin_bottom = 20.0
text = "Close"

[node name="Spacer2" type="Control" parent="Bg/VBoxContainer/LabelContainer2"]
margin_left = 55.0
margin_right = 86.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="SelectButton" type="Button" parent="Bg/VBoxContainer/LabelContainer2"]
margin_left = 90.0
margin_right = 141.0
margin_bottom = 20.0
text = "Select"

[node name="Spacer4" type="Control" parent="Bg/VBoxContainer/LabelContainer2"]
margin_left = 145.0
margin_right = 145.0
margin_bottom = 20.0

[node name="Spacer2" type="Control" parent="Bg/VBoxContainer"]
margin_top = 207.0
margin_right = 145.0
margin_bottom = 207.0

[connection signal="item_activated" from="Bg/VBoxContainer/ScrollContainer/Tree" to="." method="_on_Tree_item_activated"]
[connection signal="item_selected" from="Bg/VBoxContainer/ScrollContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="pressed" from="Bg/VBoxContainer/LabelContainer2/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Bg/VBoxContainer/LabelContainer2/SelectButton" to="." method="_on_SelectButton_pressed"]
